# rust-plot

./: Cargo.toml
examples/: plot_image.rs  third.rs
src/: geometry.rs  image_plot.rs  lib.rs  stat.rs  utils.rs
src/graph/: mod.rs  polar.rs  rectangular.rs
src/graph_3d/: generation.rs  mod.rs  projections.rs
src/plot/: dot.rs  mod.rs
src/plot/shape/: circle.rs  ellipse.rs  mod.rs
src/sampling/: mod.rs
