[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "rust-plot"
version = "0.1.0"

[dependencies]
num-traits = "0.1.37"
rand = "0.3.15"

[dependencies.image]
optional = true
version = "0.12.4"

[dependencies.nalgebra]
optional = true
version = "0.12.0"

[dependencies.softrender]
path = "../rust-softrender"

[dev-dependencies]
rayon = "0.7.0"

[features]
default = ["image_compat", "3d_graph"]
image_compat = ["image"]
3d_graph = ["nalgebra"]
